fix badge bg on firefox

--- a/sass-compile/scss/_styles.scss
+++ b/sass-compile/scss/_styles.scss
@@ -170,7 +170,7 @@ input[type="number"] {
     margin-bottom: 1.5rem;
     min-width: 220px;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 100% 100%;
     transform: rotate(-15deg);
   }
 
